add some ending words

--- a/day0_basic_overview/index.html
+++ b/day0_basic_overview/index.html
@@ -236,11 +236,22 @@
 							<li>Suka ngoprek</li>
 							<li>Kriminalitas tergantung keimanan</li>
 						</ul>
+						<br>
+						<center>
+							<blockquote class="twitter-tweet"><p lang="en" dir="ltr">You wanna know how dedicated I was to this thing I&#39;m working on? I reviewed 40,000 lines of DNS records, just to find that one vulnerable instance... and it paid off! 😂</p>&mdash; NahamSec✊🏻✊🏽✊🏾✊🏿 (@NahamSec) <a href="https://twitter.com/NahamSec/status/1268950388255801344?ref_src=twsrc%5Etfw">June 5, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+						</center>
 					</section>
 				</section>
 				<section>
 					Last word
-					<br> Nyesel saat muda masih sempet, nyesel saat tua mending mati aja
+					<br> Nyesel saat muda masih sempet, nyesel saat tua jangan sampe 
+				</section>
+				<section>
+					Bahasan minggu depan (Practical)
+					<br> Membuat web portfolio / personal dengan github
+				</section>
+				<section>
+					T H A N K S
 				</section>
 			</div>
 		</div>
