fix more little flaws

--- a/day3_lebih_dekat_dengan_cli/index.html
+++ b/day3_lebih_dekat_dengan_cli/index.html
@@ -118,7 +118,7 @@
 								<li>Berasa <em>hacker</em> ¯\_(ツ)_/¯</li>
 								<li>And so much more ...</li>
 							</ul> <br> <br>
-							<span style="font-size: 25px;">(look at the fact that is use <em>much</em> over <em>many</em>)</span>
+							<span style="font-size: 25px;">(look at the fact that it use <em>much</em> over <em>many</em>)</span>
 						</div>
 					</section>
 				</section>
