add day5 slides

--- a/day5_becoming_a_fullstack_ninja/index.html
+++ b/day5_becoming_a_fullstack_ninja/index.html
@@ -166,12 +166,13 @@
 				<section data-background-color="#132100">
 					<section class="center">
 						<div style="max-width: 1000px;">
-							Architecture
+							Ide Aplikasi
 						</div>
 					</section>
 					<section class="center">
 						<div style="max-width: 1000px;">
-							REST (resource: https://restfulapi.net/)
+							- Sistem polling
+							- Simple CRUD app
 						</div>
 					</section>
 				</section>
